--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "http-server": "^14.1.0",
+    "vuepress": "^1.9.7",
+    "vuepress-types": "^0.9.4"
+  },
   "files": [
     "src/**",
     "README.md",
