--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@gitgraph/core": "^1.5.0",
+    "@gitgraph/js": "^1.4.0",
+    "gitgraph-minigram": "github:smori1983/gitgraph-minigram#9d7435101c6ba7acf8a0f7cd54d906ba07ebc21a",
+    "sprintf-js": "^1.1.2"
+  },
   "devDependencies": {
     "http-server": "^14.1.0",
     "vuepress": "^1.9.7",
