--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "dev": "vuepress dev --no-cache example",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
