--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@gitgraph/core": "^1.5.0",
     "@gitgraph/js": "^1.4.0",
     "gitgraph-minigram": "github:smori1983/gitgraph-minigram#6f197d8409ca27035bc702517017c416ab84bea4",
-    "sprintf-js": "^1.1.2"
+    "sprintf-js": "^1.1.2",
+    "vue-tabs-component": "^1.5.0"
   },
   "devDependencies": {
     "http-server": "^14.1.0",
