--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@gitgraph/core": "^1.5.0",
     "@gitgraph/js": "^1.4.0",
     "codemirror": "^5.65.3",
-    "gitgraph-minigram": "github:smori1983/gitgraph-minigram#a947692297b5df8a3f027e1b3b807e6f8739ae6e",
+    "gitgraph-minigram": "^0.1.0",
     "sprintf-js": "^1.1.2",
     "vue-codemirror": "^4.0.6",
     "vue-tabs-component": "^1.5.0"
