Modify example site configs

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "example:dev": "vuepress dev --no-cache example",
     "example:build": "vuepress build example",
+    "example:server": "http-server example/.vuepress/dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
