--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@gitgraph/core": "^1.5.0",
     "@gitgraph/js": "^1.4.0",
-    "gitgraph-minigram": "github:smori1983/gitgraph-minigram#7ffbb4e309072ca2e201355e1de53f16b6c5c0a4",
+    "gitgraph-minigram": "^0.2.0",
     "sprintf-js": "^1.1.2",
     "vue-tabs-component": "^1.5.0"
   },
