--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@gitgraph/core": "^1.5.0",
     "@gitgraph/js": "^1.4.0",
+    "codemirror": "^5.65.4",
     "gitgraph-minigram": "^0.2.0",
     "sprintf-js": "^1.1.2",
+    "vue-codemirror": "^4.0.6",
     "vue-tabs-component": "^1.5.0"
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.5",
     "http-server": "^14.1.0",
     "vuepress": "^1.9.7",
     "vuepress-types": "^0.9.4"
