[actions] Modify npm run script

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: "npm ci"
       - name: Build site
-        run: "npm run build"
+        run: "npm run example:build"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
