--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "example:dev": "vuepress dev --no-cache example",
     "example:build": "vuepress build example",
     "example:server": "http-server example/.vuepress/dist",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "vuepress build example"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@gitgraph/core": "^1.5.0",
